--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 logging.level.org.springframework = debug;
+
+spring.main.allow-bean-definition-overriding=true
+
+management.endpoints.web.exposure.include=*
