--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-logging.level.org.springframework = debug;
+spring.jpa.defer-datasource-initialization=true
+logging.level.org.springframework = Info;
 
 spring.main.allow-bean-definition-overriding=true
 
